@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-02T01:25:26Z",
-  "count_outdated" : 1867,
-  "uniques_outdated" : 1107,
-  "count" : 1882,
-  "uniques" : 1121,
+  "timestamp" : "2025-07-03T01:25:25Z",
+  "count_outdated" : 1869,
+  "uniques_outdated" : 1108,
+  "count" : 1884,
+  "uniques" : 1123,
   "clones" : [
-    {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-20T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-02T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
